--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -11,11 +11,13 @@
   <div class="container">
     <div class="form-box">
       <h1>Inicia sesión</h1>
-      <form>
-        <input type="email" placeholder="Correo" required>
-        <input type="password" placeholder="Contraseña" required>
-        <button type="submit">Iniciar sesión</button>
-      </form>
+        <form method="POST">
+        {% csrf_token %}
+        <input type="email" name="correo" placeholder="Correo" required>
+        <input type="password" name="password" placeholder="Contraseña" required>
+        <button type="submit">Ingresar</button>
+        </form>
+
     </div>
   </div>
 </body>
