--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -11,13 +11,16 @@
   <div class="container">
     <div class="form-box">
       <h1>Regístrate</h1>
-      <form>
-        <input type="text" placeholder="Nombre" required>
-        <input type="text" placeholder="Apellido" required>
-        <input type="email" placeholder="Correo" required>
-        <input type="password" placeholder="Contraseña" required>
+        <form method="POST">
+        {% csrf_token %}
+        <input type="text" name="nombre" placeholder="Nombre" required>
+        <input type="text" name="apellido" placeholder="Apellido" required>
+        <input type="email" name="correo" placeholder="Correo" required>
+        <input type="password" name="password" placeholder="Contraseña" required>
         <button type="submit">Registrarse</button>
-      </form>
+        </form>
+
+        <p>¿Ya tienes cuenta? <a href="{% url 'login' %}">Inicia sesión</a></p>
     </div>
   </div>
 </body>
